--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+/*reset*/
+html, body {
+    height: 100%;
+    margin: 0;
+}
+body {
+    background-color: #c0c0c0;
+}
+* { box-sizing: border-box; }
