awesome fonts added and some features for modal structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div>
         <div class="modalHeader">
           <ng-content select="h2"></ng-content>
-          <span (click)="closeModal()">x</span>
+          <span (click)="closeModal()"><fa-icon [icon]="faCoffee"></fa-icon></span>
         </div>
         <div class="modalContent">
           <ng-content select=".contenido"></ng-content>
