--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,7 @@
             width: 300px;
             height: 200px;
             background-color: #fff;
+            border-radius: 3px;
             margin: 0 auto;
             padding: 1rem;
             box-shadow: 0 0 40px rgba(0, 0, 0, .4);;
